fixed minor alignment issue

--- a/Day-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Day-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -17,7 +17,7 @@
   width: 85%;
 }
 .header-title {
-  align-items: center;
+  align-items: flex-end;
   display: flex;
 }
 .handle {
